--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mantine/core": "^6.0.6",
     "@mantine/hooks": "^6.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^1.5.0",
