--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mantine/hooks": "^6.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^1.5.0",
@@ -28,6 +29,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-tips": "^2.1.0",
