--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^6.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drawline": "^1.1.0",
     "react-router-dom": "^6.10.0",
     "zustand": "^4.3.7"
   },
